...
    val colors = TrailsTheme.colors
    val typography = TrailsTheme.typography
    Column(modifier, verticalArrangement = Arrangement.spacedBy(2.dp)) {
        Text(photo.description, color = colors.textSecondary, style = typography.bodySmall)
        Text("Photo: ${photo.photographer}", color = colors.textSecondary, style = typography.labelSmall)
        FlowRow(horizontalArrangement = Arrangement.spacedBy(16.dp)) {
            TrailsLinkButton("Photo source", { uriHandler.openUri(photo.sourceUrl) })
            TrailsLinkButton(photo.license, { uriHandler.openUri(photo.licenseUrl) })
        }
    }
}

